javadoc fixes
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>
(cherry picked from commit e845926dc1ae8ddbc803a0b802cfb6604bf341d6)